@@ -9,17 +9,13 @@ AM_CPPFLAGS = \
 sbin_PROGRAMS = ipmi-locate
 
 ipmi_locate_LDADD = \
-	$(top_builddir)/common/src/libtoolcommon.la \
-	$(top_builddir)/libfreeipmi/src/libfreeipmi.la
+	$(top_builddir)/common/src/libtoolcommon.la
 
 ipmi_locate_SOURCES = \
 	ipmi-locate.c \
 	ipmi-locate-argp.c
 
 $(top_builddir)/common/src/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/libfreeipmi/src/libfreeipmi.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 force-dependency-check:
