@@ -12,9 +12,7 @@ AM_CPPFLAGS = \
 sbin_PROGRAMS = ipmi-sel
 
 ipmi_sel_LDADD = \
-	$(top_builddir)/common/src/libtoolcommon.la \
-	$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la \
-	$(top_builddir)/libfreeipmi/src/libfreeipmi.la
+	$(top_builddir)/common/src/libtoolcommon.la
  
 ipmi_sel_SOURCES = \
 	ipmi-sel.c \
@@ -22,12 +20,6 @@ ipmi_sel_SOURCES = \
 	ipmi-sel-entry.c
  
 $(top_builddir)/common/src/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/libfreeipmi/src/libfreeipmi.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 force-dependency-check:
