@@ -14,10 +14,7 @@ AM_CPPFLAGS = \
 sbin_PROGRAMS = ipmi-sensors-config
 
 ipmi_sensors_config_LDADD = \
-	$(top_builddir)/common/src/libtoolcommon.la \
-	$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la \
-	$(top_builddir)/common/src/libconfigtoolcommon.la \
-	$(top_builddir)/libfreeipmi/src/libfreeipmi.la
+	$(top_builddir)/common/src/libconfigtoolcommon.la
 
 ipmi_sensors_config_SOURCES = \
 	ipmi-sensors-config.c \
@@ -26,16 +23,7 @@ ipmi_sensors_config_SOURCES = \
 	ipmi-sensors-config-threshold-section.c \
 	ipmi-sensors-config-utils.c
 
-$(top_builddir)/common/src/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
 $(top_builddir)/common/src/libconfigtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/libfreeipmi/src/libfreeipmi.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 force-dependency-check:
