@@ -22,10 +22,7 @@ AM_CPPFLAGS = \
 sbin_PROGRAMS = pef-config
 
 pef_config_LDADD = \
-	$(top_builddir)/common/src/libtoolcommon.la \
-	$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la \
-	$(top_builddir)/common/src/libconfigtoolcommon.la \
-	$(top_builddir)/libfreeipmi/src/libfreeipmi.la
+	$(top_builddir)/common/src/libconfigtoolcommon.la
 
 pef_config_SOURCES = \
 	pef-config.c \
@@ -42,16 +39,7 @@ pef_config_SOURCES = \
 	pef-config-utils.c \
 	pef-config-validate.c
 
-$(top_builddir)/common/src/libtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/ipmidetect/src/libipmidetect/libipmidetect.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
 $(top_builddir)/common/src/libconfigtoolcommon.la : force-dependency-check
-	@cd `dirname $@` && make `basename $@`
-
-$(top_builddir)/libfreeipmi/src/libfreeipmi.la : force-dependency-check
 	@cd `dirname $@` && make `basename $@`
 
 force-dependency-check:
