@@ -14,7 +14,10 @@
 	Link libmiscutils.la into libtoolcommon.la.  Link
 	libfreeipmiportability.la into libtoolcommon.la.  rename
 	libipmiping.la to libpingtoolcommon.la for consistency.  Link
-	libfreeipmiportability.la into libpingtoolcommon.la.
+	libfreeipmiportability.la into libpingtoolcommon.la.  Link
+	libtoolcommon into libconfigtoolcommon.  Link libipmidetect and
+	libfreeipmi into libtoolcommon.  Link libfreeipmi into
+	libpingtoolcommon.
 
 	* Adjust all tool Makefiles appropriately for lib changes.
 	
